feat: need seller update productid and product status to chain
